WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303329
REGRESSION(
303361@main
): accessibility/ios-simulator/live-regions/live-region-types.html crashes
https://bugs.webkit.org/show_bug.cgi?id=303329
Summary
REGRESSION(303361@main): accessibility/ios-simulator/live-regions/live-region...
Jonathan Bedard
Reported
2025-12-01 11:40:47 PST
New test added in
303361@main
crashes on iOS Debug builds. History:
https://results.webkit.org/?suite=layout-tests&test=accessibility/ios-simulator/live-regions/live-region-types.html
Example Run:
https://build.webkit.org/#/builders/1688/builds/233
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-01 11:41:18 PST
<
rdar://problem/165634340
>
Joshua Hoffman
Comment 2
2025-12-02 15:28:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54727
EWS
Comment 3
2025-12-04 07:56:23 PST
Committed
303912@main
(02c24f670489): <
https://commits.webkit.org/303912@main
> Reviewed commits have been landed. Closing PR #54727 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug