REGRESSION(303361@main): accessibility/ios-simulator/live-regions/live-region-types.html crashes https://bugs.webkit.org/show_bug.cgi?id=303329 rdar://165634340

Reviewed by Tyler Wilcock.

We were hitting this assert because on iOS, INCLUDE_IGNORED_IN_CORE_AX_TREE is false, and
all child indices are assumed to be based on unignored parents/children.

We can fix this by using unignored parents when traversing using nextInPreOrder, only when
INCLUDE_IGNORED_IN_CORE_AX_TREE is disabled.

* Source/WebCore/accessibility/AXCoreObject.cpp:
(WebCore::AXCoreObject::crossFrameParentObjectUnignored const):
(WebCore::AXCoreObject::parentObjectIncludingCrossFrame const):
(WebCore::AXCoreObject::nextInPreOrder):
(WebCore::AXCoreObject::nextSiblingIncludingIgnored const):
* Source/WebCore/accessibility/AXCoreObject.h:

Canonical link: https://commits.webkit.org/303912@main